fixed uv index padding issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,4 +110,7 @@ p {
   .card-header {
     padding: .5rem 1rem;
   }
+  p {
+    margin-bottom: 12px;
+  }
 } 
